# snake-game

./: .gitignore  CMakeLists.txt  color.frag  color.vert
include/: glslprogram.h  scene.h  smm.h  srm.h
src/: CMakeLists.txt  glslprogram.c  main.c  scene.c  smm.c  srm.c
