cmake_minimum_required(VERSION 2.6)

project(snake-game)

set(CMAKE_VERBOSE_MAKEFILE OFF)
set(CMAKE_BUILD_TYPE Release)
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR})

set(${PROJECT_NAME}_VERSION_MAJOR 0)
set(${PROJECT_NAME}_VERSION_MINOR 0)
set(${PROJECT_NAME}_VERSION_PATCH 1)
set(${PROJECT_NAME}_VERSION "${${PROJECT_NAME}_VERSION_MAJOR}.${${PROJECT_NAME}_VERSION_MINOR}.${${PROJECT_NAME}_VERSION_PATCH}")
message(STATUS "${PROJECT_NAME} ${${PROJECT_NAME}_VERSION}")

set(CMAKE_DEBUG_POSTFIX "_d")

set(CMAKE_C_FLAGS "-Wall")
set(CMAKE_C_FLAGS_DEBUG "-g")

set(${PROJECT_NAME}_INCLUDE_DIRS
  include/)

include_directories(
	${${PROJECT_NAME}_INCLUDE_DIRS}
)

set(${PROJECT_NAME}_ADDITIONAL_LIBS
  GLEW
  GL
  GLU
  SDL2
  m)

add_subdirectory(src)
